--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@
   pointer-events: none;
 }
 
+.whtColor{
+  color:#fff !important;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -100,17 +104,17 @@ nav {
 
 .form-input {
   background: none;
-  width: 100px;
+  width: 200px;
   padding: 10px 20px;
   font-weight: bold;
 }
 
 .btn-submit {
-  border: 1px solid #fff;
-  border-radius: 5px;
-  background: linear-gradient(311deg, rgba(255, 255, 255, 0.50) 0%, rgba(255, 255, 255, 0.00) 100%);
-  padding: 0px 30px;
-  font-size: 15px;
+  border: 1px solid #fff !important;
+  border-radius: 5px !important;
+  background: linear-gradient(311deg, rgba(255, 255, 255, 0.50) 0%, rgba(255, 255, 255, 0.00) 100%) !important;
+  padding: 0px 30px !important;
+  font-size: 15px !important;
 }
 
 .form-group {
@@ -123,9 +127,9 @@ nav {
 }
 
 .text-center {
-  text-align: center;
-  margin: 0px auto 20px;
-  padding: 10px 50px;
+  text-align: center !important;
+  margin: 0px auto 20px  !important;
+  padding: 10px 50px !important;
 }
 
 .shiny2 {
